Closed Bug 536704 Opened 16 years ago Closed 16 years ago

auto sending return receipts does not work

Categories

(MailNews Core :: Composition, defect)

defect
Not set
minor

Tracking

(thunderbird3.0 .1-fixed)

RESOLVED FIXED
Thunderbird 3.1a1
Tracking Status
thunderbird3.0 --- .1-fixed

People

(Reporter: mvl, Assigned: mvl)

Details

(Keywords: fixed-seamonkey2.0.3, regression)

Attachments

(1 file)

From code inspection: http://mxr.mozilla.org/comm-central/source/mailnews/extensions/mdn/src/nsMsgMdnGenerator.cpp#362 The receipt will only be send automatically if (1) the return path is empty, and (2) it is equal to the address the receipt should be sent to. Obviously, both can not hold a the same time. This seems like a conversion error: http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&root=/cvsroot&subdir=mozilla/mailnews/extensions/mdn/src&command=DIFF_FRAMESET&file=nsMsgMdnGenerator.cpp&rev2=1.21&rev1=1.20 around line 371. The check should be reversed. Now, I can't test this bug, because my server messes with the return path. So it will never match for me anyway. And I don't know if this should be fixed at all. People might have unknowingly set the pref to autosend, but still got asked to send, because of this bug.
Attached patch patchSplinter Review
This patch should fix it. But see my remarks in comment 0
Attachment #419143 - Flags: review?
Attachment #419143 - Flags: review? → review?(bienvenu)
this bug was almost certainly introduced in 3.0 so I think fixing it is the right thing to do. Thx for the patch.
Comment on attachment 419143 [details] [diff] [review] patch this does fix the problem for me.
Attachment #419143 - Flags: superreview+
Attachment #419143 - Flags: review?(bienvenu)
Attachment #419143 - Flags: review+
Attachment #419143 - Flags: approval-thunderbird3.0.1?
We've had several reports of this...
Keywords: regression
I pushed this to trunk so we can get a little baking time before we want it on branch: http://hg.mozilla.org/comm-central/rev/9659ba5295e6
Assignee: nobody → mvl
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1a1
Attachment #419143 - Flags: approval-thunderbird3.0.1? → approval-thunderbird3.0.1+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: