Bug 536704 auto sending return receipts does not work. r/sr=bienvenu